--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
 install: 
   - pip install .
 before_script: 
+  - cp travis-ci/manage.py manage.py
   - python manage.py syncdb --noinput
 script:
   - python manage.py test
