--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ python:
   - "2.7"
 install: 
   - pip install .
+  - pip install pep8
 before_script: 
   - cp travis-ci/manage.py manage.py
   - python manage.py syncdb --noinput
 script:
+  - pep8 mdot_rest/ --exclude=migrations
   - python manage.py test
