--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,13 @@ python:
 install: 
   - pip install .
   - pip install pep8
+  - pip install coverage
+  - pip install python-coveralls
 before_script: 
   - cp travis-ci/manage.py manage.py
   - python manage.py syncdb --noinput
 script:
   - pep8 mdot_rest/ --exclude=migrations
-  - python manage.py test
+  - coverage run --source=mdot_rest/ --omit=mdot_rest/migrations/* manage.py test mdot_rest
+after_script:
+  - coveralls
