--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,12 @@ sudo: false
 language: python
 python:
   - "2.7"
-install: 
-  - pip install .
+install:
+  - pip install -r requirements.txt
   - pip install pep8
   - pip install coverage
   - pip install python-coveralls
-before_script: 
+before_script:
   - cp travis-ci/manage.py manage.py
   - python manage.py syncdb --noinput
 script:
