--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - pip install -r requirements.txt
   - pip install pep8
   - pip install coverage
-  - pip install python-coveralls
+  - pip install coveralls
 before_script:
   - cp travis-ci/manage.py manage.py
   - python manage.py syncdb --noinput
