--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ python:
   - "2.7"
 install:
   - pip install -r requirements.txt
-  - pip install pep8
+  - pip install pycodestyle
   - pip install coverage
   - pip install coveralls
 before_script:
   - cp travis-ci/manage.py manage.py
   - python manage.py syncdb --noinput
 script:
-  - pep8 mdot_rest/ --exclude=migrations
+  - pycodestyle mdot_rest/ --exclude=migrations
   - coverage run --source=mdot_rest/ --omit=mdot_rest/migrations/* manage.py test mdot_rest
 after_script:
   - coveralls
