--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - pip install coveralls
 before_script:
   - cp travis-ci/manage.py manage.py
-  - python manage.py syncdb --noinput
+  - python manage.py migrate --noinput
 script:
   - pycodestyle mdot_rest/ --exclude=migrations
   - coverage run --source=mdot_rest/ --omit=mdot_rest/migrations/* manage.py test mdot_rest
