--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: true
 language: python
 python:
   - "3.6"
@@ -7,6 +7,8 @@ install:
   - pip install pycodestyle
   - pip install coverage
   - pip install coveralls
+  - sudo apt-get update
+  - sudo apt-get install libxmlsec1 libxmlsec1-dev
 before_script:
   - cp sampleproj/manage.py manage.py
   - python manage.py migrate --noinput --settings=sampleproj.settings.travis
