Delete db so unique superuser can be created again.
We'll clean this up when we fix up the newer docker container.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     ports:
       - "${PORT:-8000}:8000"
     command: >
-      bash -c "python manage.py migrate --settings=sampleproj.settings.local
+      bash -c "rm sampleproj/db.sqlite3
+      && python manage.py migrate --settings=sampleproj.settings.local
       && python manage.py createsuperuser --username javerage --email javerage@example.com --noinput --settings=sampleproj.settings.local
       && python manage.py runserver 0:8000 --settings=sampleproj.settings.local"
