fixed type in docker run script in travis file

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,8 +1,8 @@
 [run]
-source = mdot-rest
+source = mdot_rest
 parallel = True
 
 [paths]
 source =
-  mdot-rest/
-  /app/mdot-rest/
+  mdot_rest/
+  /app/mdot_rest/
