--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
   - pip install coverage
   - pip install coveralls
 script:
-  - docker run -u root -it -v /tmp/coverage -e DJANGO_APP="${DJANGO_APP}" -e "ENV=localdev" -e "AUTH=SAML_MOCK" "${IMAGE_TAG}-test" bash -c ". ./travis/test.sh"
+  - docker run -u root -it -v /tmp:/coverage -e DJANGO_APP="${DJANGO_APP}" -e "ENV=localdev" -e "AUTH=SAML_MOCK" "${IMAGE_TAG}-test" bash -c ". ./travis/test.sh"
 after_script:
   - cp /tmp/.coverage.* .
   - coverage combine
