--- a/docker/test-values.yml
+++ b/docker/test-values.yml
@@ -23,14 +23,14 @@ readiness:
   enabled: true
 externalService:
   enabled: true
-  name: mdot-db-service
+  name: mdot-api-db-service
   type: ClusterIP
   serviceAddress: 172.18.0.37  # change to match db
   servicePort: 3306
 database:
   engine: mysql
   name: api_test
-  hostname: mdot-db-service
+  hostname: mdot-api-db-service
   secretName: test-api.mdot.uw.edu-sql-secrets
 repo: mdot-rest
 instance: test
