--- a/docker/test-values.yml
+++ b/docker/test-values.yml
@@ -45,16 +45,18 @@ gcsCredentials:
 cronjob:
   enabled: false
 environmentVariables:
-  - name: ENV
-    value: test
-  - name: AUTH
-    value: SAML
-  - name: SAML_ENTITY_ID
-    value: https://test-api.mdot.uw.edu/saml2
-  - name: CLUSTER_CNAME
-    value: test-api.mdot.uw.edu
   - name: ADMIN_AUTHZ_GROUP
     value: 'u_acadev_mdot-admins'
+  - name: AUTH
+    value: SAML
+  - name: CLUSTER_CNAME
+    value: test-api.mdot.uw.edu
+  - name: ENV
+    value: test
+  - name: SAML_ENTITY_ID
+    value: https://test-api.mdot.uw.edu/saml2
+  - name: WEBSERVER
+    value: nginx
 externalSecrets:
   enabled: true
   secrets:
