--- a/docker/prod-values.yml
+++ b/docker/prod-values.yml
@@ -66,7 +66,7 @@ environmentVariables:
   - name: ENV
     value: prod
   - name: SAML_ENTITY_ID
-    value: https://api.mdot.uw.edu/saml2
+    value: https://prod-api.mdot.uw.edu/saml2
   - name: WEBSERVER
     value: nginx
 externalSecrets:
