--- a/docker/prod-values.yml
+++ b/docker/prod-values.yml
@@ -38,7 +38,7 @@ externalService:
   enabled: true
   name: mdot-api-db-service
   type: ClusterIP
-  serviceAddress: 172.18.0.37  # change to match db
+  serviceAddress: 172.18.0.37
   servicePort: 3306
 database:
   engine: mysql
@@ -59,7 +59,7 @@ cronjob:
   enabled: false
 environmentVariables:
   - name: ADMIN_AUTHZ_GROUP
-    value: 'u_acadev_mdot-admins'   # change to match?
+    value: 'u_acadev_mdot-admins'
   - name: AUTH
     value: SAML
   - name: CLUSTER_CNAME
