--- a/docker/prod-values.yml
+++ b/docker/prod-values.yml
@@ -48,7 +48,7 @@ database:
 repo: mdot-rest
 instance: prod
 image:
-  repository: registry.hub.docker.com/acait/mdot-rest
+  repository: gcr.io/uwit-mci-axdd/mdot-rest
   tag: IMAGE_TAG
 memcached:
   enabled: false
