--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
-version: '3'
+version: '3.4'
 
 services:
   app:
     restart: always
     container_name: mdot-rest
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: app-container
     # map the local (host) directories to their container counterparts
     # to support live-syncing
     volumes:
@@ -14,7 +17,3 @@ services:
     environment:
       ENV: localdev
       AUTH: ${AUTH:-SAML_MOCK}
-    command: >
-      bash -c "/app/bin/python /app/manage.py migrate
-      && /app/bin/python /app/manage.py loaddata admin_user.json
-      && /app/bin/python /app/manage.py runserver 0:8000"
