remove whitespace from sample.env variable name

--- a/sample.env
+++ b/sample.env
@@ -4,4 +4,4 @@
 #PORT=8002
 
 # This tells Django what settings to use.
-DJANGO_SETTINGS_MODULE = sampleproj.settings.local
+DJANGO_SETTINGS_MODULE=sampleproj.settings.local
