--- a/docker/test-values.yml
+++ b/docker/test-values.yml
@@ -81,10 +81,10 @@ externalSecrets:
         - name: password
           property: password
     - name: test-api.mdot.uw.edu-ic-certs
-      externalKey: axdd/kv/data/scout/test-manager/ic-certs
+      externalKey: axdd/kv/data/mdot/test-api/ic-certs
       data:
         - name: test-api.mdot.uw.edu-ic.cert
-          property: test.manager.scout.uw.edu-ic.cert
+          property: test-api.mdot.uw.edu-ic.cert
     - name: test-api.mdot.uw.edu-uw-idp-cert
       externalKey: axdd/kv/data/idp-cert
       data:
