--- a/docker/test-values.yml
+++ b/docker/test-values.yml
@@ -31,20 +31,19 @@ externalService:
   enabled: true
   name: mdot-api-db-service
   type: ClusterIP
-  serviceAddress: 172.18.0.37  # change to match db
-  servicePort: 3306
+  serviceAddress: 172.18.1.206
+  servicePort: 5432
 database:
-  engine: mysql
+  engine: postgres
   name: api_test
   hostname: mdot-api-db-service
   secretName: test-api.mdot.uw.edu-sql-secrets
 repo: mdot-rest
 instance: test
-image:
-  repository: gcr.io/uwit-mci-axdd/mdot-rest
-  tag: IMAGE_TAG
 memcached:
   enabled: false
+certs:
+  mounted: false
 gcsCredentials:
   mounted: true
   secretName: test-api.mdot.uw.edu-gc-service-credentials
@@ -65,7 +64,7 @@ externalSecrets:
   enabled: true
   secrets:
     - name: test-api.mdot.uw.edu-secrets
-      externalKey: axdd/kv/data/mdot/test-api/secrets
+      externalKey: mdot/test-api/secrets
       data:
         - name: django-secret
           property: django-secret
@@ -74,24 +73,24 @@ externalSecrets:
         - name: storage-bucket-name
           property: storage-bucket-name
     - name: test-api.mdot.uw.edu-sql-secrets
-      externalKey: axdd/kv/data/mdot/test-api/sql-secrets
+      externalKey: mdot/test-api/sql-secrets
       data:
         - name: username
           property: username
         - name: password
           property: password
     - name: test-api.mdot.uw.edu-ic-certs
-      externalKey: axdd/kv/data/mdot/test-api/ic-certs
+      externalKey: mdot/test-api/ic-certs
       data:
         - name: test-api.mdot.uw.edu-ic.cert
           property: test-api.mdot.uw.edu-ic.cert
     - name: test-api.mdot.uw.edu-uw-idp-cert
-      externalKey: axdd/kv/data/idp-cert
+      externalKey: idp-cert
       data:
         - name: uw-idp-cert
           property: cert
     - name: test-api.mdot.uw.edu-gc-service-credentials
-      externalKey: axdd/kv/data/mdot/test-api/gc-service-credentials
+      externalKey: mdot/test-api/gc-service-credentials
       data:
         - name: credentials.json
           property: credentials.json
